@@ -1,0 +1,15 @@
+#include "../Classes/AppDelegate.h"
+
+#include <stdlib.h>
+#include <stdio.h>
+#include <unistd.h>
+#include <string>
+
+USING_NS_CC;
+
+int main(int argc, char **argv)
+{
+    // create the application instance
+    AppDelegate app;
+    return Application::getInstance()->run();
+}
